Removal of unnecessary 'other sites'

--- a/innestrony.html
+++ b/innestrony.html
@@ -83,16 +83,6 @@
         </div>
         <div class="gallery">
             <div class="gimg">
-                <a href="innestrony/is01/index.html" target="_blank">
-                    <img src="img/is01.webp" /></a>
-            </div>
-            <div class="gbar">
-                <div class="gtext">Animacja GTA - 4 elementy CSS</div>
-                <div class="gbtn"><a href="zip/is01.zip" download>Pobierz</a></div>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="gimg">
                 <a href="innestrony/is56/index.html" target="_blank">
                     <img src="img/is56.webp" /></a>
             </div>
@@ -111,16 +101,6 @@
                     Samochody i najmniejsza liczba [PHP]
                 </div>
                 <div class="gbtn"><a href="zip/is55.zip" download>Pobierz</a></div>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="gimg">
-                <a href="innestrony/is54/index.html" target="_blank">
-                    <img src="img/is54.webp" /></a>
-            </div>
-            <div class="gbar">
-                <div class="gtext">Grid (?)</div>
-                <div class="gbtn"><a href="zip/is54.zip" download>Pobierz</a></div>
             </div>
         </div>
         <div class="gallery">
@@ -169,7 +149,7 @@
                     <img src="img/is47.webp" /></a>
             </div>
             <div class="gbar">
-                <div class="gtext">Diho (W podstronie jakiś labirynt)</div>
+                <div class="gtext">Labirynt</div>
                 <div class="gbtn"><a href="zip/is47.zip" download>Pobierz</a></div>
             </div>
         </div>
@@ -197,16 +177,6 @@
         </div>
         <div class="gallery">
             <div class="gimg">
-                <a href="innestrony/is51/index.html" target="_blank">
-                    <img src="img/is51.webp" /></a>
-            </div>
-            <div class="gbar">
-                <div class="gtext">Luksemburg (2ga mapa)</div>
-                <div class="gbtn"><a href="zip/is51.zip" download>Pobierz</a></div>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="gimg">
                 <a href="innestrony/is44/index.html" target="_blank">
                     <img src="img/is44.webp" /></a>
             </div>
@@ -217,32 +187,12 @@
         </div>
         <div class="gallery">
             <div class="gimg">
-                <a href="innestrony/is43/index.html" target="_blank">
-                    <img src="img/is43.webp" /></a>
-            </div>
-            <div class="gbar">
-                <div class="gtext">Formularz Young Leosi</div>
-                <div class="gbtn"><a href="zip/is43.zip" download>Pobierz</a></div>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="gimg">
                 <a href="innestrony/is42/index.html" target="_blank">
                     <img src="img/is42.webp" /></a>
             </div>
             <div class="gbar">
                 <div class="gtext">Sklep Jakuba</div>
                 <div class="gbtn"><a href="zip/is42.zip" download>Pobierz</a></div>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="gimg">
-                <a href="innestrony/is41/index.html" target="_blank">
-                    <img src="img/is41.webp" /></a>
-            </div>
-            <div class="gbar">
-                <div class="gtext">Monar</div>
-                <div class="gbtn"><a href="zip/is41.zip" download>Pobierz</a></div>
             </div>
         </div>
         <div class="gallery">
@@ -293,16 +243,6 @@
             <div class="gbar">
                 <div class="gtext">Menu rozwijane pionowe</div>
                 <div class="gbtn"><a href="zip/is36.zip" download>Pobierz</a></div>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="gimg">
-                <a href="innestrony/is35/index.html" target="_blank">
-                    <img src="img/is35.webp" /></a>
-            </div>
-            <div class="gbar">
-                <div class="gtext">Estetyczne różowo-niebieskie gówno</div>
-                <div class="gbtn"><a href="zip/is35.zip" download>Pobierz</a></div>
             </div>
         </div>
         <div class="gallery">
