Added warning to remove python files from site

--- a/python.html
+++ b/python.html
@@ -45,6 +45,10 @@
     </div>
     <script src="navbar.js"></script>
 
+    <div class="warning">
+        <p>Z dniem 21.06.2024 wszystkie pliki python zostaną usunięte z strony</p>
+    </div>
+
     <div class="gallery-container">
         <div class="gallery">
             <a target="_blank" href="python/051022.py">
