--- a/info.html
+++ b/info.html
@@ -1,42 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-       <meta charset="UTF-8">
-       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>INFORMACJE - SCHOOL PROJECTS</title>
-       <link rel="stylesheet" href="style.css">
-       <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-       <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-       <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-       <link rel="manifest" href="favicon/site.webmanifest">
-    </head>
-    <body>
-        <div class="logo">
-            <img src="/favicon/logo.png" alt="logo" />
-            <p>SCHOOL PROJECTS</p>
-        </div>
-        <script src="navbar.js"></script>
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>SCHOOL PROJECTS</title>
+   <link rel="stylesheet" href="style.css">
+   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+   <link rel="manifest" href="favicon/site.webmanifest">
+   </head>
+<body>
+<script src="navbar.js"></script>
 
-        <p class="information">
-            Wszystkie pliki na tej stronie są przesyłane przez anonimowych
-            wspierających. Każda z tych osób oświadcza, że żaden element na
-            stronie nie narusza żadnych praw autorskich. Jeżeli jednak jest
-            inaczej wyślij maila na
-            <a href="mailto:kontakt@285.works">kontakt@285.works</a><br />
-            Cała strona jest dostępna na licencji
-            <a href="https://opensource.org/licenses/MIT" target="_blank"
-                >MIT</a
-            >
-        </p>
+<p class="information">
+    Wszystkie pliki na tej stronie są przesyłane przez anonimowych wspierających.
+    Każda z tych osób oświadcza, że żaden element na stronie nie narusza żadnych praw autorskich.
+    Jeżeli jednak jest inaczej wyślij maila na <a href="mailto:kontakt@285.works">kontakt@285.works</a><br>
+    Cała strona jest dostępna na licencji <a href="https://opensource.org/licenses/MIT" target="_blank">MIT</a>
+</p>
 
-        <p class="information">
-            <a
-                href="https://github.com/rotkiW285/SchoolProjects"
-                target="_blank"
-                >Repozytorium na GitHubie</a
-            ><br />
-            <a href="https://285.works" target="_blank">285.WORKS</a>
-        </p>
-    </body>
+<p class="information">
+<a href="https://github.com/rotkiW285/SchoolProjects" target="_blank">Repozytorium na GitHubie</a><br>
+<a href="https://285.works" target="_blank">285.WORKS</a></p>
+</body>
 </html>
