--- a/php.html
+++ b/php.html
@@ -1,65 +1,98 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PSB & SBD - SCHOOL PROJECTS</title>
-        <link rel="stylesheet" href="style.css" />
-        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-        <link rel="manifest" href="favicon/site.webmanifest">
-        <link rel="stylesheet" href="php-table.css" />
-    </head>
-    <body>
-        <div class="logo">
-            <img src="/favicon/logo.png" alt="logo" />
-            <p>SCHOOL PROJECTS</p>
-        </div>
-        <script src="navbar.js"></script>
 
-        <div class="table-container">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Nazwa</th>
-                        <th>Data</th>
-                        <th>Typ</th>
-                        <th>Pobierz</th>
-                    </tr>
-                </thead>
-                <tbody id="table-body"></tbody>
-            </table>
-        </div>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PSB & SBD - SCHOOL PROJECTS</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="stylesheet" href="php-table.css" />
+</head>
 
-        <script>
-            fetch("pliki-php.json")
-                .then((response) => response.json())
-                .then((data) => {
-                    const tableBody = document.getElementById("table-body");
+<body>
+    <div class="logo">
+        <img src="/favicon/logo.png" alt="logo" />
+        <p>SCHOOL PROJECTS</p>
+    </div>
+    <script src="navbar.js"></script>
 
-                    data.forEach((record) => {
-                        const row = document.createElement("tr");
-                        const nameCell = document.createElement("td");
-                        const dateCell = document.createElement("td");
-                        const typeCell = document.createElement("td");
-                        const downloadCell = document.createElement("td");
+    <h1>Urządzenie jest zbyt wąskie żeby wyświetlić tabelę
+        <br>Obróć urządzenie lub użyj urządzenia z większym ekranem
+    </h1>
+    <div class="input-container">
+        <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="🔍 Wyszukaj...">
+    </div>
 
-                        nameCell.textContent = record.name;
-                        dateCell.textContent = record.date;
-                        typeCell.textContent = record.type;
-                        downloadCell.innerHTML = `<a href="${record.download}" target="_blank">Pobierz</a>`;
+    <div class="table-container">
+        <table id="data-table">
+            <thead>
+                <tr>
+                    <th>Nazwa</th>
+                    <th>Data</th>
+                    <th>Typ</th>
+                    <th>Pobierz</th>
+                </tr>
+            </thead>
+            <tbody id="table-body"></tbody>
+        </table>
+    </div>
 
-                        row.appendChild(nameCell);
-                        row.appendChild(dateCell);
-                        row.appendChild(typeCell);
-                        row.appendChild(downloadCell);
+    <script>
+        fetch("pliki-php.json")
+            .then((response) => response.json())
+            .then((data) => {
+                const tableBody = document.getElementById("table-body");
 
-                        tableBody.appendChild(row);
-                    });
+                data.forEach((record) => {
+                    const row = document.createElement("tr");
+                    const nameCell = document.createElement("td");
+                    const dateCell = document.createElement("td");
+                    const typeCell = document.createElement("td");
+                    const downloadCell = document.createElement("td");
+
+                    nameCell.textContent = record.name;
+                    dateCell.textContent = record.date;
+                    typeCell.textContent = record.type;
+                    downloadCell.innerHTML = `<a href="${record.download}" target="_blank">Pobierz</a>`;
+
+                    row.appendChild(nameCell);
+                    row.appendChild(dateCell);
+                    row.appendChild(typeCell);
+                    row.appendChild(downloadCell);
+
+                    tableBody.appendChild(row);
                 });
-            // Table appearance and operation inspired from Jan Kupczyk EE-09 repo
-        </script>
-    </body>
+            });
+
+        function searchTable() {
+            var input, filter, table, tr, td, i, txtValue;
+            input = document.getElementById("searchInput");
+            filter = input.value.toUpperCase();
+            table = document.getElementById("data-table");
+            tr = table.getElementsByTagName("tr");
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td");
+                for (var j = 0; j < td.length; j++) {
+                    let cell = td[j];
+                    if (cell) {
+                        txtValue = cell.textContent || cell.innerText;
+                        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                            tr[i].style.display = "";
+                            break;
+                        } else {
+                            tr[i].style.display = "none";
+                        }
+                    }
+                }
+            }
+        }
+        // Table appearance and operation inspired from Jan Kupczyk EE-09 repo
+    </script>
+</body>
+
 </html>
