--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 
         <div class="gallery">
             <div class="gimg">
+                <a href="sp/240412/index.html" target="_blank"> <img src="img/240412.webp"></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">12.04.24 - [PSI] - Kółko i Krzyżyk na debila</div>
+                <div class="gbtn"><a href="zip/240412.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <!-- brak plikow ^ -->
+
+        <div class="gallery">
+            <div class="gimg">
                 <a href="sp/240312/index.html" target="_blank"> <img src="img/240312.webp"></a>
             </div>
             <div class="gbar">
