--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 
         <div class="gallery">
             <div class="gimg">
+                <a href="sp/240416/index.html" target="_blank"> <img src="img/240416.webp"></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">16.04.24 - [PAI] - OnMouseUp, OnClick itp.</div>
+                <div class="gbtn"><a href="zip/240416.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+
+        <div class="gallery">
+            <div class="gimg">
                 <a href="sp/240412/index.html" target="_blank"> <img src="img/240412.webp"></a>
             </div>
             <div class="gbar">
@@ -33,7 +43,6 @@
                 <div class="gbtn"><a href="zip/240412.zip" download>Pobierz</a></div>
             </div>
         </div>
-        <!-- brak plikow ^ -->
 
         <div class="gallery">
             <div class="gimg">
