--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 
         <div class="gallery">
             <div class="gimg">
+                <a href="sp/240430/index.html" target="_blank"> <img src="img/240430.webp"></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">30.04.24 - [PAI] - Zadania formularzowe</div>
+                <div class="gbtn"><a href="zip/240430.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+
+        <div class="gallery">
+            <div class="gimg">
                 <a href="sp/240416/index.html" target="_blank"> <img src="img/240416.webp"></a>
             </div>
             <div class="gbar">
