Update warning message & add theme color meta tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
+    <meta name="theme-color" content="#00000c"/>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     </div>
 
     <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
-    <div class="warning" style="color: #ee810b;" ><p>Od 21 czerwca wszystkie projekty z roku szkolnego 2023/2024 są dostępne w podstronie <a href="starszaki.html">starszaki</a></p></div>
+    <div class="warning" style="color: #ee810b;" ><p>Wszystkie projekty z roku szkolnego 2023/2024 są dostępne w podstronie <a href="starszaki.html">starszaki</a></p></div>
 
     <div class="gallery-container">
 
