--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="php-table.css" />
+    <meta name="theme-color" content="#00000c"/>
 </head>
 
 <body>
