--- a/innestrony.html
+++ b/innestrony.html
@@ -24,6 +24,46 @@
     <div class="gallery-container">
         <div class="gallery">
             <div class="gimg">
+                <a href="innestrony/is65/index.html" target="_blank">
+                    <img src="img/is65.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">Dark mode toogle</div>
+                <div class="gbtn"><a href="zip/is65.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="innestrony/is64/index.html" target="_blank">
+                    <img src="img/is64.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">Pop-up ciasteczka</div>
+                <div class="gbtn"><a href="zip/is64.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="innestrony/is63/index.html" target="_blank">
+                    <img src="img/is63.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">Generator haseł</div>
+                <div class="gbtn"><a href="zip/is63.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="innestrony/is62/index.html" target="_blank">
+                    <img src="img/is62.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">Zegar analogowy z dark mode</div>
+                <div class="gbtn"><a href="zip/is62.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
                 <a href="innestrony/is61/index.html" target="_blank">
                     <img src="img/is61.webp" /></a>
             </div>
