--- a/starszaki.html
+++ b/starszaki.html
@@ -7,6 +7,18 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>STARSZAKI - SCHOOL PROJECTS</title>
    <link rel="stylesheet" href="style.css">
+   <meta name="author" content="rotkiW285">
+   <meta name="robots" content="noindex, nofollow">
+   <meta name="googlebot" content="noindex, nofollow">
+   <meta name="google" content="notranslate">
+   <meta property="og:title" content="School Projects">
+   <meta property="og:image" content="https://sp.285.works/img/embed.jpg">
+   <meta property="og:url" content="https://sp.285.works">
+   <meta property="og:type" content="website">
+   <meta property="twitter:card" content="summary_large_image">
+   <meta property="twitter:url" content="https://sp.285.works">
+   <meta property="twitter:title" content="School Projects">
+   <meta property="twitter:image" content="https://sp.285.works/img/embed.jpg">
    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
