--- a/starszaki.html
+++ b/starszaki.html
@@ -35,6 +35,9 @@
 
    <div class="gallery-container">
 
+
+
+<!-- 2023/2024 -->
       <div class="gallery">
          <div class="gimg">
              <a href="sp/240430/index.html" target="_blank"> <img src="img/240430.webp"></a>
@@ -42,6 +45,15 @@
          <div class="gbar">
              <div class="gtext">30.04.24 - [PAI] - Zadania formularzowe</div>
              <div class="gbtn"><a href="zip/240430.zip" download>Pobierz</a></div>
+         </div>
+     </div>
+      <div class="gallery">
+         <div class="gimg">
+             <a href="sp/240423/index.html" target="_blank"> <img src="img/240423.webp"></a>
+         </div>
+         <div class="gbar">
+             <div class="gtext">23.04.24 - [PAI] - Koszt wesela i inputy</div>
+             <div class="gbtn"><a href="zip/240423.zip" download>Pobierz</a></div>
          </div>
      </div>
 
@@ -325,7 +337,7 @@
              <div class="gbtn"><a href="zip/230905.zip" download>Pobierz</a></div>
          </div>
      </div>
-     
+<!-- 2022/2023 -->
       <div class="gallery">
          <div class="gimg">
             <a href="sp/230522/index.html" target="_blank">
@@ -498,7 +510,7 @@
          </div>
          <div class="gbar">
             <div class="gtext">
-               23.11.22 - pani N (najlepsza animacja)
+               23.11.22 - N. (najlepsza animacja)
             </div>
             <div class="gbtn"><a href="zip/221123.zip" download>Pobierz</a></div>
          </div>
