image error script

--- a/info.html
+++ b/info.html
@@ -23,6 +23,7 @@
        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
        <link rel="manifest" href="favicon/site.webmanifest">
        <meta name="theme-color" content="#00000c"/>
+       <script src="image-error.js"></script>
     </head>
     <body>
         <div class="logo">
@@ -49,7 +50,6 @@
                 target="_blank"
                 >Repozytorium na GitHubie</a
             ><br />
-            <a href="https://285.works" target="_blank">285.WORKS</a>
         </p>
     </body>
 </html>
