--- a/inne.html
+++ b/inne.html
@@ -25,6 +25,7 @@
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="php-table.css" />
     <meta name="theme-color" content="#00000c"/>
+    <script src="image-error.js"></script>
 </head>
 
 <body>
