--- a/starszaki.html
+++ b/starszaki.html
@@ -24,6 +24,7 @@
    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
    <link rel="manifest" href="favicon/site.webmanifest">
    <meta name="theme-color" content="#00000c"/>
+   <script src="image-error.js"></script>
 </head>
 
 <body>
