--- a/inne.html
+++ b/inne.html
@@ -41,6 +41,11 @@
     <div class="input-container">
         <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="🔍 Wyszukaj...">
     </div>
+    <div class="zeszyty">
+        <p><a href="https://docs.google.com/document/d/1wmfDnKYrY6Kq8SfuyD4WRn_7wZglFRAQYvtqOQOnuKw" target="_blank">E-ZESZYT 4 klasa</a></p>
+        <p><a href="https://docs.google.com/document/d/1JRkazzwamYu3MZH7w4-6ktF0Syd6llK5a-qsf3Tp4po/edit?usp=sharing" target="_blank">E-ZESZYT PAI [PHP]</a></p>
+        <p><a href="" target="_blank">E-ZESZYT PBD</a></p>
+    </div>
 
     <div class="table-container">
         <table id="data-table">
