move files from inne.html to single zip

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="navbar.js"></script>
     </div>
 
-    <!-- <div class="warning" ><p>UWAGA!<br> abcde</p></div> -->
+    <div class="warning" ><p>UWAGA!<br> Funkcje PHP nie będą tu działać</p></div>
     <div class="warning" style="color: #ee810b;" ><p>Wszystkie projekty z roku szkolnego 2023/2024 są dostępne w podstronie <a href="starszaki.html">starszaki</a></p></div>
 
     <div class="gallery-container">
