--- a/index.html
+++ b/index.html
@@ -34,14 +34,71 @@
     <script src="navbar.js"></script>
     </div>
 
-    <div class="warning" ><p>UWAGA!<br> Funkcje PHP nie będą tu działać</p></div>
-    <div class="warning" style="color: #ee810b;" ><p>Wszystkie projekty z roku szkolnego 2023/2024 są dostępne w podstronie <a href="starszaki.html">starszaki</a></p></div>
+    <!-- <div class="warning" ><p></p></div> -->
 
     <div class="gallery-container">
-
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw1.pdf" target="_blank">
+                    <img src="img/zestaw1.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 1 (PORTAL SPOŁECZNOŚCIOWY)</div>
+                <div class="gbtn"><a href="zip/zestaw1.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw2.pdf" target="_blank">
+                    <img src="img/zestaw2.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 2 (INTERNETOWY SKLEP Z EKO-WARZYWAMI)</div>
+                <div class="gbtn"><a href="zip/zestaw2.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw3.pdf" target="_blank">
+                    <img src="img/zestaw3.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 3 (WYPOZYCZALNIA FILMOW)</div>
+                <div class="gbtn"><a href="zip/zestaw3.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw4.pdf" target="_blank">
+                    <img src="img/zestaw4.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 4 (REPREZENTACJA V2)</div>
+                <div class="gbtn"><a href="zip/zestaw4.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw5.pdf" target="_blank">
+                    <img src="img/zestaw5.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 5 (REPREZENTACJA)</div>
+                <div class="gbtn"><a href="zip/zestaw5.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw6.pdf" target="_blank">
+                    <img src="img/zestaw6.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 6 (BMI)</div>
+                <div class="gbtn"><a href="zip/zestaw6.zip" download>Pobierz</a></div>
+            </div>
+        </div>
 
 
     </div>
 </body>
-
 </html>
