--- a/inne.html
+++ b/inne.html
@@ -43,8 +43,8 @@
     </div>
     <div class="zeszyty">
         <p><a href="https://docs.google.com/document/d/1wmfDnKYrY6Kq8SfuyD4WRn_7wZglFRAQYvtqOQOnuKw" target="_blank">E-ZESZYT <b>4 klasa</b></a></p>
-        <p><a href="https://docs.google.com/document/d/1JRkazzwamYu3MZH7w4-6ktF0Syd6llK5a-qsf3Tp4po" target="_blank">E-ZESZYT PAI [PHP]</a></p><br>
-        <p><a href="https://docs.google.com/document/d/1XJjW50QbHtQIpmuKTs2EvcLVKOSyn-qxgP4sXmf3DN0" target="_blank">E-ZESZYT PBD [EGZAMINY ZAWODOWE]</a></p>
+        <p><a href="https://docs.google.com/document/d/1XJjW50QbHtQIpmuKTs2EvcLVKOSyn-qxgP4sXmf3DN0" target="_blank">E-ZESZYT PBD [EGZAMINY ZAWODOWE]</a></p><br>
+        <p><a href="https://docs.google.com/document/d/1JRkazzwamYu3MZH7w4-6ktF0Syd6llK5a-qsf3Tp4po" target="_blank">E-ZESZYT PAI [PHP]</a></p>
     </div>
 
     <div class="table-container">
