--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
                 <div class="gbtn"><a href="zip/zestaw6.zip" download>Pobierz</a></div>
             </div>
         </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw7.pdf" target="_blank">
+                    <img src="img/zestaw7.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 7 (WĘDKOWANIE)</div>
+                <div class="gbtn"><a href="zip/zestaw7.zip" download>Pobierz</a></div>
+            </div>
+        </div>
 
 
     </div>
