--- a/index.html
+++ b/index.html
@@ -107,6 +107,26 @@
                 <div class="gbtn"><a href="zip/zestaw7.zip" download>Pobierz</a></div>
             </div>
         </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw8.pdf" target="_blank">
+                    <img src="img/zestaw8.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 8 (POGODA)</div>
+                <div class="gbtn"><a href="zip/zestaw8.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw9.pdf" target="_blank">
+                    <img src="img/zestaw9.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 9 (POGOTOWIE)</div>
+                <div class="gbtn"><a href="zip/zestaw9.zip" download>Pobierz</a></div>
+            </div>
+        </div>
 
 
     </div>
