--- a/index.html
+++ b/index.html
@@ -127,6 +127,26 @@
                 <div class="gbtn"><a href="zip/zestaw9.zip" download>Pobierz</a></div>
             </div>
         </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw10.pdf" target="_blank">
+                    <img src="img/zestaw10.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 10 (FORUM O PSACH)</div>
+                <div class="gbtn"><a href="zip/zestaw10.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw11.pdf" target="_blank">
+                    <img src="img/zestaw11.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 11 (PORTAL SPOŁECZNOŚCIOWY OSIEDLE)</div>
+                <div class="gbtn"><a href="zip/zestaw11.zip" download>Pobierz</a></div>
+            </div>
+        </div>
 
 
     </div>
