Update meta tags and navbar links for improved SEO and navigation

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <title>SCHOOL PROJECTS</title>
     <link rel="stylesheet" href="style.css">
     <meta name="author" content="rotkiW285">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="index, follow">
     <meta name="googlebot" content="noindex, nofollow">
     <meta name="google" content="notranslate">
     <meta property="og:title" content="School Projects">
-    <meta property="og:image" content="https://sp.285.works/img/embed.jpg">
-    <meta property="og:url" content="https://sp.285.works">
+    <meta property="og:description" content="Zbiór projektów szkolnych z przedmiotów zawodowych">
+    <meta property="og:locale" content="pl_PL">
+    <meta property="og:image" content="https://sp.285.ovh/img/embed.jpg">
+    <meta property="og:url" content="https://sp.285.ovh">
     <meta property="og:type" content="website">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://sp.285.works">
+    <meta property="twitter:url" content="https://sp.285.ovh">
     <meta property="twitter:title" content="School Projects">
-    <meta property="twitter:image" content="https://sp.285.works/img/embed.jpg">
+    <meta property="twitter:image" content="https://sp.285.ovh/img/embed.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
