--- a/index.html
+++ b/index.html
@@ -149,6 +149,26 @@
                 <div class="gbtn"><a href="zip/zestaw11.zip" download>Pobierz</a></div>
             </div>
         </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw12.pdf" target="_blank">
+                    <img src="img/zestaw12.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 12 (GIBRALTAR)</div>
+                <div class="gbtn"><a href="zip/zestaw12.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw13.pdf" target="_blank">
+                    <img src="img/zestaw13.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 13 (GALERIA)</div>
+                <div class="gbtn"><a href="zip/zestaw13.zip" download>Pobierz</a></div>
+            </div>
+        </div>
 
 
     </div>
