--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
                 <div class="gbtn"><a href="zip/zestaw13.zip" download>Pobierz</a></div>
             </div>
         </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw14.pdf" target="_blank">
+                    <img src="img/zestaw14.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 14 (BMI V2)</div>
+                <div class="gbtn"><a href="zip/zestaw14.zip" download>Pobierz</a></div>
+            </div>
+        </div>
 
 
     </div>
