Add footer, style updates, fix meta links

--- a/starszaki.html
+++ b/starszaki.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
 
 <head>
    <meta charset="UTF-8" />
@@ -12,13 +12,13 @@
    <meta name="googlebot" content="noindex, nofollow">
    <meta name="google" content="notranslate">
    <meta property="og:title" content="School Projects">
-   <meta property="og:image" content="https://sp.285.works/img/embed.jpg">
-   <meta property="og:url" content="https://sp.285.works">
+   <meta property="og:image" content="https://sp.285.ovh/img/embed.jpg">
+   <meta property="og:url" content="https://sp.285.ovh">
    <meta property="og:type" content="website">
    <meta property="twitter:card" content="summary_large_image">
-   <meta property="twitter:url" content="https://sp.285.works">
+   <meta property="twitter:url" content="https://sp.285.ovh">
    <meta property="twitter:title" content="School Projects">
-   <meta property="twitter:image" content="https://sp.285.works/img/embed.jpg">
+   <meta property="twitter:image" content="https://sp.285.ovh/img/embed.jpg">
    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -760,5 +760,7 @@
       </div>
    </div>
 </body>
-
+<footer>
+   <p>Strona stworzona przez <a href="info">rotkiW285</a></p>
+</footer>
 </html>
