--- a/info.html
+++ b/info.html
@@ -1,50 +1,48 @@
 <!doctype html>
-<html lang="en">
-    <head>
-       <meta charset="UTF-8">
-       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>INFORMACJE - SCHOOL PROJECTS</title>
-       <link rel="stylesheet" href="style.css">
-       <meta name="author" content="rotkiW285">
-       <meta name="robots" content="noindex, nofollow">
-       <meta name="googlebot" content="noindex, nofollow">
-       <meta name="google" content="notranslate">
-       <meta property="og:title" content="School Projects">
-       <meta property="og:image" content="https://sp.285.works/img/embed.jpg">
-       <meta property="og:url" content="https://sp.285.works">
-       <meta property="og:type" content="website">
-       <meta property="twitter:card" content="summary_large_image">
-       <meta property="twitter:url" content="https://sp.285.works">
-       <meta property="twitter:title" content="School Projects">
-       <meta property="twitter:image" content="https://sp.285.works/img/embed.jpg">
-       <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-       <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-       <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-       <link rel="manifest" href="favicon/site.webmanifest">
-       <meta name="theme-color" content="#00000c"/>
-    </head>
-    <body>
-        <div class="logo">
-            <img src="/favicon/logo.png" alt="logo" />
-            <p>SCHOOL PROJECTS</p>
-        </div>
-        <script src="navbar.js"></script>
+<html lang="pl">
 
-        <p class="information">
-            Wszystkie pliki na tej stronie są przesyłane przez anonimowych
-            wspierających. Każda z tych osób oświadcza, że żaden element na
-            stronie nie narusza żadnych praw autorskich. Jeżeli jednak jest
-            inaczej wyślij maila na
-            <a href="mailto:kontakt@285.works">kontakt@285.works</a><br />
-        </p>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>INFORMACJE - SCHOOL PROJECTS</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="author" content="rotkiW285">
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="googlebot" content="noindex, nofollow">
+    <meta name="google" content="notranslate">
+    <meta property="og:title" content="School Projects">
+    <meta property="og:image" content="https://sp.285.ovh/img/embed.jpg">
+    <meta property="og:url" content="https://sp.285.ovh">
+    <meta property="og:type" content="website">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sp.285.ovh">
+    <meta property="twitter:title" content="School Projects">
+    <meta property="twitter:image" content="https://sp.285.ovh/img/embed.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <meta name="theme-color" content="#00000c" />
+</head>
 
-        <p class="information">
-            <a
-                href="https://github.com/rotkiW285/SchoolProjects"
-                target="_blank"
-                >Repozytorium na GitHubie</a
-            ><br />
-        </p>
-    </body>
+<body>
+    <div class="logo">
+        <img src="/favicon/logo.png" alt="logo" />
+        <p>SCHOOL PROJECTS</p>
+    </div>
+    <script src="navbar.js"></script>
+
+    <p class="information">
+        Wszystkie pliki na tej stronie są przesyłane przez anonimowych
+        wspierających. Każda z tych osób oświadcza, że żaden element na
+        stronie nie narusza żadnych praw autorskich. Jeżeli jednak jest
+        inaczej wyślij maila na
+        <a href="mailto:schoolprojects@285.ovh">schoolprojects@285.ovh</a><br />
+    </p>
+
+    <p class="information">
+        <a href="https://github.com/rotkiW285/SchoolProjects" target="_blank">Repozytorium na GitHubie</a><br />
+    </p>
+</body>
 </html>
