Update footer text and enhance footer link styles

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     </div>
 <footer>
-    <p>Strona stworzona przez <a href="info">rotkiW285</a></p>
+    <p><a href="info">© rotkiW285</a></p>
 </footer>
 </body>
 </html>
