--- a/innestrony.html
+++ b/innestrony.html
@@ -502,6 +502,6 @@
     </div>
 </body>
 <footer>
-    <p>Strona stworzona przez <a href="info" target="_blank">rotkiW285</a></p>
+    <p><a href="info">© rotkiW285</a></p>
 </footer>
 </html>
