--- a/index.html
+++ b/index.html
@@ -179,6 +179,16 @@
                 <div class="gbtn"><a href="zip/zestaw14.zip" download>Pobierz</a></div>
             </div>
         </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw_probny.pdf" target="_blank">
+                    <img src="img/zestaw_probny.webp" /></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Próbny egzamin</div>
+                <div class="gbtn"><a href="zip/zestaw_probny.zip" download>Pobierz</a></div>
+            </div>
+        </div>
 
 
     </div>
