Zestaw 15,16,17 & 5 new PDFs

--- a/index.html
+++ b/index.html
@@ -189,7 +189,36 @@
                 <div class="gbtn"><a href="zip/zestaw_probny.zip" download>Pobierz</a></div>
             </div>
         </div>
-
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw15.pdf" target="_blank">
+                    <img src="img/zestaw15.webp"/></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 15 (ODLOTY PHP)</div>
+                <div class="gbtn"><a href="zip/zestaw15.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw16.pdf" target="_blank">
+                    <img src="img/zestaw16.webp"/></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 16 (PORTAL DLA WĘDKARZY PHP)</div>
+                <div class="gbtn"><a href="zip/zestaw16.zip" download>Pobierz</a></div>
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gimg">
+                <a href="files/zestaw17.pdf" target="_blank">
+                    <img src="img/zestaw17.webp"/></a>
+            </div>
+            <div class="gbar">
+                <div class="gtext">[PBD] Zestaw 17 (RÓŻOWA STACJA PALIW JS)</div>
+                <div class="gbtn"><a href="zip/zestaw17.zip" download>Pobierz</a></div>
+            </div>
+        </div>
 
     </div>
 <footer>
