--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
     </div>
 <footer>
-    <p><a href="info">© rotkiW285</a></p>
+    <p><a href="info">© 2025 rotkiW285</a></p>
 </footer>
 </body>
 </html>
