--- a/pliki.html
+++ b/pliki.html
@@ -116,6 +116,6 @@
     </script>
 </body>
 <footer>
-    <p><a href="info">© rotkiW285</a></p>
+    <p><a href="info">© 2025 rotkiW285</a></p>
 </footer>
 </html>
