--- a/starszaki.html
+++ b/starszaki.html
@@ -761,6 +761,6 @@
    </div>
 </body>
 <footer>
-   <p><a href="info">© rotkiW285</a></p>
+   <p><a href="info">© 2025 rotkiW285</a></p>
 </footer>
 </html>
